fix: fix info card text overflow and display preference next to reason

--- a/src/components/userInfo/userInfo.style.css
+++ b/src/components/userInfo/userInfo.style.css
@@ -13,3 +13,7 @@
     padding-bottom: 0;
     border-bottom: none;
 }
+.description.user_info__item{
+
+    word-break: break-word;
+}
